Enabling the IDE