@@ -397,10 +397,65 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- GWT Maven Plugin -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>gwt-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <!--<goal>test</goal>-->
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.google.gwt</groupId>
+                        <artifactId>gwt-codeserver</artifactId>
+                        <version>${com.google.gwt.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.google.gwt</groupId>
+                        <artifactId>gwt-dev</artifactId>
+                        <version>${com.google.gwt.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.google.gwt</groupId>
+                        <artifactId>gwt-user</artifactId>
+                        <version>${com.google.gwt.version}</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <extraJvmArgs>-Xss512m -Xmx2048m -XX:MaxPermSize=1024m</extraJvmArgs>
+                    <modules>
+                        <module>org.eclipse.che.ide.IDE</module>
+                        <module>org.eclipse.che.ide.ext.java.JavaParserWorker</module>
+                    </modules>
+                    <logLevel>INFO</logLevel>
+                    <!--<style>PRETTY</style>-->
+                    <!--<enableClosureCompiler>true</enableClosureCompiler>-->
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <executions>
+                    <execution>
+                        <id>unwar-ide</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <move todir="${project.build.directory}/${project.artifactId}-${project.version}/_app/javaParserWorker">
+                                    <fileset
+                                            dir="${project.build.directory}/${project.artifactId}-${project.version}/javaParserWorker"/>
+                                </move>
+                            </tasks>
+                        </configuration>
+                    </execution>
                     <execution>
                         <id>buildnumber</id>
                         <phase>compile</phase>
